--- a/PomodoroUI/PomodoroUI/Pages/Manage/Courses/Partials/_Tasks.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Courses/Partials/_Tasks.cshtml
@@ -1,5 +1,6 @@
 ﻿@model PomodoroUI.Pages.Manage.Courses.IndexModel
 @using PomodoroLibrary.Models.Tables.StudyTaskEntities
+@using PomodoroUI.Pages.Shared.Snippets.StudyTaskSnippets
 
 @{
     var completedTasks = Model.Course.StudyTasks.Where(u => u.Completed && !u.Archived).ToList();
@@ -54,7 +55,7 @@
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center">
-                                    <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="#study-task-edit-modal-@(task.Id)">
+                                    <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="@($"#{StudyTaskModalHelper.GetEditModalId(task.Id)}")">
                                         <i class="bi bi-three-dots"></i>
                                     </a>
                                 </div>
@@ -106,7 +107,7 @@
                                 </div>
                             </div>
                             <div class="d-flex align-items-center">
-                                <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="#study-task-edit-modal-@(task.Id)">
+                                <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="@($"#{StudyTaskModalHelper.GetEditModalId(task.Id)}")">
                                     <i class="bi bi-three-dots"></i>
                                 </a>
                             </div>
