--- a/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="~/PomodoroUI.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body x-init="document.body.style.visibility = 'visible';" style="height: 100vh;">
-    <div class="d-flex flex-column h-100">
+<body x-init="document.body.style.visibility = 'visible';">
+    <div class="content-wrapper">
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3 py-3">
                 <div class="container">
@@ -41,7 +41,6 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-page="/Manage/Index">Manage</a>
                             </li>
-
                         </ul>
                         <div class="d-none d-sm-block mt-1 h-100 mx-3">
                             <div class="vr h-100"></div>
@@ -56,7 +55,6 @@
                         <div class="d-none d-sm-block mt-1 h-100 mx-3">
                             <div class="vr h-100"></div>
                         </div>
-
                         <partial name="_LoginPartial" />
                     </div>
                 </div>
@@ -67,6 +65,9 @@
                 @RenderBody()
             </main>
         </div>
+        <footer class="footer bg-body-tertiary">
+            <small class="my-0 py-0"><i class="bi bi-github me-2"></i><a href="https://github.com/kj-49" class="my-0 py-0 text-body-tertiary" target="_blank">Kyle James</a></small>
+        </footer>
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
