--- a/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml.css
+++ b/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml.css
@@ -1,3 +1,15 @@
 ﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
+.content-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.footer {
+    margin-top: auto;
+    padding: 0.1rem 0rem 0.3rem 0rem;
+    text-align: center;
+}
