--- a/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Manage/Index.cshtml
@@ -132,7 +132,7 @@
                     <div class="row align-items-center">
                         <div class="d-flex align-items-center justify-content-between">
                             <div class="col-md-5">
-                                <span class="me-1">@task.Name</span>
+                                <study-task-link task="@task"></study-task-link>
                                 @foreach(var label in task.TaskLabels)
                                 {
                                     <badge text="@label.Name" color="@label.HexColor"></badge>
