--- a/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
+++ b/PomodoroUI/PomodoroUI/Pages/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                 @RenderBody()
             </main>
         </div>
-        <footer class="footer bg-body-tertiary">
+        <footer class="footer">
             <small class="my-0 py-0"><i class="bi bi-github me-2"></i><a href="https://github.com/kj-49" class="my-0 py-0 text-body-tertiary" target="_blank">Kyle James</a></small>
         </footer>
     </div>
