--- a/src/Pomodoro.UI/Pages/Manage/Courses/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Courses/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@page "{id:int}"
 @using Pomodoro.Library.Models.Tables.StudyTaskEntities
 @using Pomodoro.UI.ViewModels
+@using System.Text.Json
+@using System.Text.Json.Serialization
 @model Pomodoro.UI.Pages.Manage.Courses.IndexModel
 @{
     ViewData["Title"] = Model.Course.Name;
@@ -183,29 +185,58 @@
 }
 
 
+<div class="mb-3">
+    <div class="d-flex align-items-center">
+        <h2>
+            @Model.Course.Name
+        </h2>
+        <a class="btn btn-link" data-bs-toggle="modal" data-bs-target="#course-edit-modal">
+            <i class="bi bi-pencil text-muted"></i>
+        </a>
+    </div>
 
-<div class="d-flex justify-content-between align-items-end mb-3">
-    <div>
-        <div class="d-flex align-items-center">
-            <h2>
-                @Model.Course.Name
-            </h2>
-            <a class="btn btn-link" data-bs-toggle="modal" data-bs-target="#course-edit-modal">
-                <i class="bi bi-pencil text-muted"></i>
-            </a>
+    <p class="text-muted mb-0">@Model.Course.Description</p>
+</div>
+<div class="mb-3">
+    <div class="row">
+        <div class="col-12 col-md-6 mb-3">
+            <div class="d-flex justify-content-between align-items-end mb-3">
+                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#study-task-create-modal"><i class="bi bi-plus-lg"></i> New Task</button>
+            </div>
+            @await Html.PartialAsync("Partials/_Tasks")
+        </div>
+        <div class="col-12 col-md-6">
+            <h6>Progress</h6>
+            <div id="main" class="h-100" style="min-height: 200px;"></div>
         </div>
 
-        <p class="text-muted mb-0">@Model.Course.Description</p>
     </div>
-    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#study-task-create-modal"><i class="bi bi-plus-lg"></i> New Task</button>
+    
 </div>
 
-
-@await Html.PartialAsync("Partials/_Tasks")
 
 
 
 @section Scripts {
 
+    <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.1/dist/echarts.min.js"></script>
     <partial name="_ValidationScriptsPartial" />
+
+
+    <script asp-asp-append-version="true" src="~/Pages/Manage/Courses/Index.cshtml.js"></script>
+
+    <script>
+
+
+        @{
+            JsonSerializerOptions options = new()
+                {
+                    ReferenceHandler = ReferenceHandler.IgnoreCycles,
+                    WriteIndented = false
+                };
+        }
+        course = @Html.Raw(@JsonSerializer.Serialize(Model.Course, options));
+
+        console.log(course);
+    </script>
 }
