--- a/src/Pomodoro.UI/Pages/Manage/Courses/Partials/_Tasks.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Courses/Partials/_Tasks.cshtml
@@ -13,7 +13,7 @@
 } else
 {
     <div id="all-study-tasks" class="row">
-        <div class="col-12 col-md-6 mb-3">
+        <div class="col-12 mb-3">
             <form hx-post
                   hx-page="Index">
                 <ul class="list-group">
@@ -66,7 +66,7 @@
                 </ul>
             </form>
         </div>
-        <div class="col-12 col-md-6">
+        <div class="col-12">
             <ul class="list-group">
                 <li class="list-group-item">
                     <div class="d-flex align-items-center mb-1">
@@ -93,7 +93,7 @@
                                 </div>
                                 <div class="d-flex flex-column justify-content-between">
                                     <div class="d-flex align-items-center">
-                                        <h6 class="card-title mb-1 me-2">@task.Name</h6>
+                                        <study-task-link task="@task" bold="true"></study-task-link>
                                         @if (task.TaskPriority != null)
                                         {
                                             <badge priority="true" text="@task.TaskPriority.Level" color="@task.TaskPriority.DisplayHexColor"></badge>
