--- a/src/Pomodoro.UI/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -29,20 +29,24 @@
         @if (!Model.IsExternallyAuthenticated)
         {
             <form method="post" asp-page-handler="ChangePassword">
+                <div asp-validation-summary="ModelOnly" class="text-danger form-text" role="alert"></div>
                 <div class="mb-4">
                     <div class="mb-4">
-                        <label for="currentPassword" class="form-label fw-semibold">Current Password</label>
-                        <input type="password" id="currentPassword" class="form-control form-control-sm" placeholder="Enter current password">
+                        <label asp-for="PasswordInput.OldPassword" class="form-label fw-semibold">Current Password</label>
+                        <input asp-for="PasswordInput.OldPassword" type="password" class="form-control form-control-sm" autocomplete="current-password" aria-required="true" placeholder="Please enter your old password.">
+                        <span asp-validation-for="PasswordInput.OldPassword" class="text-danger form-text"></span>
                     </div>
 
                     <div class="mb-4">
-                        <label for="newPassword" class="form-label fw-semibold">New Password</label>
-                        <input type="password" id="newPassword" class="form-control form-control-sm" placeholder="Enter new password">
+                        <label asp-for="PasswordInput.NewPassword" class="form-label fw-semibold">New Password</label>
+                        <input asp-for="PasswordInput.NewPassword" type="password" class="form-control form-control-sm" autocomplete="new-password" aria-required="true" placeholder="Please enter your new password.">
+                        <span asp-validation-for="PasswordInput.NewPassword" class="text-danger form-text"></span>
                     </div>
 
                     <div class="mb-4">
-                        <label for="confirmPassword" class="form-label fw-semibold">Confirm New Password</label>
-                        <input type="password" id="confirmPassword" class="form-control form-control-sm" placeholder="Confirm new password">
+                        <label asp-for="PasswordInput.ConfirmPassword" class="form-label fw-semibold">Confirm New Password</label>
+                        <input asp-for="PasswordInput.ConfirmPassword" type="password" class="form-control form-control-sm" autocomplete="new-password" aria-required="true" placeholder="Please confirm your new password.">
+                        <span asp-validation-for="PasswordInput.ConfirmPassword" class="text-danger form-text"></span>
                     </div>
                     <button type="submit" class="btn btn-primary btn-sm">Change Password</button>
                 </div>
@@ -51,3 +55,7 @@
         
     </div>
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
