--- a/src/Pomodoro.UI/Pages/Shared/_Layout.cshtml
+++ b/src/Pomodoro.UI/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using Pomodoro.Library.Models.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+
+<!DOCTYPE html>
 <html lang="en" x-data="{
     theme: localStorage.getItem('theme') || '@Context.Session.GetString("theme")',
     setTheme(newTheme) {
@@ -37,14 +41,17 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1">
                         </ul>
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" asp-page="/Manage/Index">Manage</a>
-                            </li>
-                        </ul>
-                        <div class="d-none d-sm-block mt-1 h-100 mx-3">
-                            <div class="vr h-100"></div>
-                        </div>
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-page="/Manage/Index">Manage</a>
+                                </li>
+                            </ul>
+                            <div class="d-none d-sm-block mt-1 h-100 mx-3">
+                                <div class="vr h-100"></div>
+                            </div>
+                        }
                         <div class="dropdown">
                             <i style="cursor: pointer" :class="theme == 'dark' ? 'bi bi-moon-stars' : 'bi bi-sun-fill'" id="themeDropdown" data-bs-toggle="dropdown" aria-expanded="false"></i>
                             <ul class="dropdown-menu" aria-labelledby="themeDropdown">
