Added base page model that requires the TimeZone property to be populated in all child PageModels. Fixed deadline crud, closes #50.

--- a/src/Pomodoro.UI/Pages/Manage/Courses/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Courses/Index.cshtml
@@ -177,6 +177,7 @@
 {
     @await Html.PartialAsync("/Pages/Shared/Snippets/StudyTaskSnippets/_EditStudyTaskModal.cshtml", new EditStudyTaskVM 
     {
+        TimeZone = Model.TimeZone,
         StudyTask = task,
         StudyTaskUpdate = new StudyTaskUpdate(),
         TaskLabels = Model.TaskLabels,
