--- a/src/Pomodoro.UI/Pages/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Index.cshtml
@@ -160,6 +160,7 @@
         {
             @await Html.PartialAsync("/Pages/Shared/Snippets/StudyTaskSnippets/_EditStudyTaskModal.cshtml", new EditStudyTaskVM
             {
+                TimeZone = Model.TimeZone,
                 StudyTask = task,
                 StudyTaskUpdate = new StudyTaskUpdate(),
                 TaskLabels = Model.TaskLabels,
