--- a/src/Pomodoro.UI/Pages/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Index.cshtml
@@ -57,16 +57,31 @@
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
         <h5 class="mb-0">Courses</h5>
-        <button data-bs-toggle="modal" data-bs-target="#course-create-modal" class="btn btn-secondary"><i class="bi bi-plus-lg"></i> Add Course</button>
+        @if (Model.Courses.Count > 0)
+        {
+            <button data-bs-toggle="modal" data-bs-target="#course-create-modal" class="btn btn-secondary"><i class="bi bi-plus-lg"></i> Add Course</button>
+        }
     </div>
-
-    @if (Model.Courses.Count == 0)
-    {
-        <p>No courses added.</p>
-    }
-    else
-    {
-        <div class="row">
+    <div class="row">
+        @if (Model.Courses.Count == 0)
+        {
+            // Todo: Show empty course with button.
+            <div class="col-md-4 mb-4">
+                <a data-bs-toggle="modal" data-bs-target="#course-create-modal" class="text-decoration-none">
+                    <div class="card h-100 card-hover" style="border-left: 5px solid;">
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <div>
+                                <h5 class="text-body-tertiary text-opacity-50 fw-bold"><i class="bi bi-plus-lg me-2"></i>Add New Course</h5>
+                                <p class="card-text text-body-tertiary">Description...</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        }
+        else
+        {
+        
             @foreach (var course in Model.Courses)
             {
                 <div class="col-md-4 mb-4">
@@ -86,8 +101,9 @@
                     </a>
                 </div>
             }
-        </div>
-    }
+      
+        }
+    </div>
 </div>
 
 
@@ -96,77 +112,68 @@
         <h5 class="mb-0">Tasks Due Next</h5>
         @* <a class="btn btn-primary" asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a> *@
     </div>
-
-    @if (Model.StudyTasks.Count == 0)
-    {
-        <p>No tasks available.</p>
-    }
-    else
-    {
-        <ul class="list-group">
-            <li class="list-group-item bg-body-tertiary">
+    <ul class="list-group">
+        <li class="list-group-item bg-body-tertiary">
+            <div class="row align-items-center">
+                <div class="d-flex align-items-center justify-content-between">
+                    <div class="col-md-5">
+                        <span><strong>Task</strong></span>
+                    </div>
+                    <div class="d-none d-md-block col-md-4">
+                        <span><strong>Due</strong></span>
+                    </div>
+                    <div class="d-none d-lg-block col-md-1">
+                        <span><strong>Course</strong></span>
+                    </div>
+                    <div class="col-md-2 text-end text-nowrap">
+                        <span><strong>Actions</strong></span>
+                    </div>
+                </div>
+            </div>
+        </li>
+        @foreach (var task in Model.StudyTasks.Next(5))
+        {
+            <li class="list-group-item">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="col-md-5">
-                            <span><strong>Task</strong></span>
+                            <study-task-link task="@task"></study-task-link>
+                            @foreach(var label in task.TaskLabels)
+                            {
+                                <badge text="@label.Name" color="@label.HexColor"></badge>
+                            }
                         </div>
                         <div class="d-none d-md-block col-md-4">
-                            <span><strong>Due</strong></span>
+                            <span class="text-muted">@task.Deadline.Humanize()</span>
                         </div>
                         <div class="d-none d-lg-block col-md-1">
-                            <span><strong>Course</strong></span>
+                            @if (task.Course != null)
+                            {
+                                <badge text="@task.Course.Name" color="@task.Course.HexColor"></badge>
+                            }
                         </div>
-                        <div class="col-md-2 text-end text-nowrap">
-                            <span><strong>Actions</strong></span>
+                        <div class="col-md-2">
+                            <div class="d-flex align-items-center justify-content-end">
+                                <a class="btn btn-link text-secondary p-0" data-bs-toggle="modal" data-bs-target="@($"#{StudyTaskModalHelper.GetEditModalId(task.Id)}")">
+                                    <i class="bi bi-three-dots"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </li>
-            @foreach (var task in Model.StudyTasks.Next(5))
-            {
-                <li class="list-group-item">
-                    <div class="row align-items-center">
-                        <div class="d-flex align-items-center justify-content-between">
-                            <div class="col-md-5">
-                                <study-task-link task="@task"></study-task-link>
-                                @foreach(var label in task.TaskLabels)
-                                {
-                                    <badge text="@label.Name" color="@label.HexColor"></badge>
-                                }
-                            </div>
-                            <div class="d-none d-md-block col-md-4">
-                                <span class="text-muted">@task.Deadline.Humanize()</span>
-                            </div>
-                            <div class="d-none d-lg-block col-md-1">
-                                @if (task.Course != null)
-                                {
-                                    <badge text="@task.Course.Name" color="@task.Course.HexColor"></badge>
-                                }
-                            </div>
-                            <div class="col-md-2">
-                                <div class="d-flex align-items-center justify-content-end">
-                                    <a class="btn btn-link text-secondary p-0" data-bs-toggle="modal" data-bs-target="@($"#{StudyTaskModalHelper.GetEditModalId(task.Id)}")">
-                                        <i class="bi bi-three-dots"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            }
-        </ul>
-        // Render the edit modal for each task
-        @foreach (var task in Model.StudyTasks)
-        {
-            @await Html.PartialAsync("/Pages/Shared/Snippets/StudyTaskSnippets/_EditStudyTaskModal.cshtml", new EditStudyTaskVM
-            {
-                TimeZone = Model.TimeZone,
-                StudyTask = task,
-                StudyTaskUpdate = new StudyTaskUpdate(),
-                TaskLabels = Model.TaskLabels,
-                TaskPriorities = Model.TaskPriorities
-            })
         }
+    </ul>
+    @foreach (var task in Model.StudyTasks)
+    {
+        @await Html.PartialAsync("/Pages/Shared/Snippets/StudyTaskSnippets/_EditStudyTaskModal.cshtml", new EditStudyTaskVM
+        {
+            TimeZone = Model.TimeZone,
+            StudyTask = task,
+            StudyTaskUpdate = new StudyTaskUpdate(),
+            TaskLabels = Model.TaskLabels,
+            TaskPriorities = Model.TaskPriorities
+        })
     }
 </div>
 
