--- a/src/Pomodoro.UI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
@@ -6,57 +6,62 @@
     var uncompletedTasks = Model.StudyTasks.Where(u => !u.Completed && !u.Archived).ToList();
 }
 
+<form hx-post
+    hx-page="Index"
+    >
+    <ul class="list-group">
 
-@if (uncompletedTasks.Count == 0)
-{
-    <p>No Tasks yet.</p>
-}
-else
-{
-    <form hx-post
-        hx-page="Index"
-        >
-        <ul class="list-group">
-
-            @foreach (var task in uncompletedTasks)
-            {
-                <li class="list-group-item">
-                    <div class="d-flex justify-content-between align-items-center mb-0">
-                        <div class="d-flex align-items-baseline">
-                            <div>
-                                <input hx-post
-                                    hx-page-handler="CompleteTask"
-                                    hx-route-id="@task.Id"
-                                    hx-swap="outerHTML"
-                                    hx-target="#all-study-tasks"
-                                    type="checkbox" 
-                                    class="form-check-input me-2 mt-1" />
-                            </div>
-                            <div class="d-flex flex-column justify-content-between">
-                                <div class="d-flex align-items-center">
-                                    <study-task-link task="@task" bold="true"></study-task-link>
-                                    @if (task.TaskPriority != null)
-                                    {
-                                        <badge priority="true" text="@task.TaskPriority.Level" color="@task.TaskPriority.DisplayHexColor"></badge>
-                                    }
-                                    @foreach (var label in task.TaskLabels)
-                                    {
-                                        <badge text="@label.Name" color="@label.HexColor"></badge>
-                                    }
-                                </div>
-                                <small>@task.Status()</small>
-                            </div>
+        @foreach (var task in uncompletedTasks)
+        {
+            <li class="list-group-item">
+                <div class="d-flex justify-content-between align-items-center mb-0">
+                    <div class="d-flex align-items-baseline">
+                        <div>
+                            <input hx-post
+                                hx-page-handler="CompleteTask"
+                                hx-route-id="@task.Id"
+                                hx-swap="outerHTML"
+                                hx-target="#all-study-tasks"
+                                type="checkbox" 
+                                class="form-check-input me-2 mt-1" />
                         </div>
-                        <div class="d-flex align-items-center">
-                            <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="#study-task-edit-modal" hx-get hx-page="Index" hx-page-handler="StudyTaskUpdate" hx-route-id="@task.Id" hx-swap="innerHTML" hx-target="#study-task-edit-form">
-                                <i class="bi bi-three-dots"></i>
-                            </a>
+                        <div class="d-flex flex-column justify-content-between">
+                            <div class="d-flex align-items-center">
+                                <study-task-link task="@task" bold="true"></study-task-link>
+                                @if (task.TaskPriority != null)
+                                {
+                                    <badge priority="true" text="@task.TaskPriority.Level" color="@task.TaskPriority.DisplayHexColor"></badge>
+                                }
+                                @foreach (var label in task.TaskLabels)
+                                {
+                                    <badge text="@label.Name" color="@label.HexColor"></badge>
+                                }
+                            </div>
+                            <small>@task.Status()</small>
                         </div>
                     </div>
+                    <div class="d-flex align-items-center">
+                        <a class="btn btn-link text-primary p-0" data-bs-toggle="modal" data-bs-target="#study-task-edit-modal" hx-get hx-page="Index" hx-page-handler="StudyTaskUpdate" hx-route-id="@task.Id" hx-swap="innerHTML" hx-target="#study-task-edit-form">
+                            <i class="bi bi-three-dots"></i>
+                        </a>
+                    </div>
+                </div>
                     
-                </li>
-            }
-        </ul>
-    </form>
-}
+            </li>
+        }
+        <li class="list-group-item custom-hover">
+            <a data-bs-toggle="modal" data-bs-target="#study-task-create-modal" class="d-flex justify-content-between align-items-center mb-0">
+                <div class="d-flex align-items-baseline">
+                    <div class="d-flex flex-column justify-content-between">
+                        <div class="d-flex align-items-center">
+                            <span class="fw-semibold ext-decoration-none"><i class="bi bi-plus"></i> Add New Task</span>
+                        </div>
+                        <small>Status...</small>
+                    </div>
+                </div>
+            </a>
+        </li>
+    </ul>
+</form>
+
 
