--- a/src/Pomodoro.UI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
@@ -52,9 +52,12 @@
         <li class="list-group-item custom-hover">
             <a data-bs-toggle="modal" data-bs-target="#study-task-create-modal" class="d-flex justify-content-between align-items-center mb-0">
                 <div class="d-flex align-items-baseline">
+                    <div>
+                        <i class="bi bi-plus me-2"></i>
+                    </div>
                     <div class="d-flex flex-column justify-content-between">
                         <div class="d-flex align-items-center">
-                            <span class="fw-semibold ext-decoration-none"><i class="bi bi-plus"></i> Add New Task</span>
+                            <span class="fw-semibold ext-decoration-none">Add New Task</span>
                         </div>
                         <small>Status...</small>
                     </div>
