New create course UI now applies in all scenarios.

--- a/src/Pomodoro.UI/Pages/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Index.cshtml
@@ -57,52 +57,42 @@
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
         <h5 class="mb-0">Courses</h5>
-        @if (Model.Courses.Count > 0)
-        {
-            <button data-bs-toggle="modal" data-bs-target="#course-create-modal" class="btn btn-secondary"><i class="bi bi-plus-lg"></i> Add Course</button>
-        }
     </div>
     <div class="row">
-        @if (Model.Courses.Count == 0)
+        @foreach (var course in Model.Courses)
         {
-            // Todo: Show empty course with button.
             <div class="col-md-4 mb-4">
-                <a data-bs-toggle="modal" data-bs-target="#course-create-modal" class="text-decoration-none">
-                    <div class="card h-100 card-hover" style="border-left: 5px solid;">
+                <a asp-page="/Manage/Courses/Index" asp-route-id="@course.Id" class="text-decoration-none">
+                    <div class="card h-100 card-hover" style="border-left: 5px solid @course.HexColor;">
                         <div class="card-body d-flex flex-column justify-content-between">
                             <div>
-                                <h5 class="text-body-tertiary text-opacity-50 fw-bold"><i class="bi bi-plus-lg me-2"></i>Add New Course</h5>
-                                <p class="card-text text-body-tertiary">Description...</p>
+                                <h5 class="card-title fw-bold">@course.Name</h5>
+                                <p class="card-text">@course.Description</p>
+                            </div>
+
+                            <div class="mt-3 d-flex align-items-center justify-content-between">
+                                <small class="text-muted">Incomplete Tasks: @(course.StudyTasks.Count(t => !t.Completed))</small>
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
         }
-        else
-        {
-        
-            @foreach (var course in Model.Courses)
-            {
-                <div class="col-md-4 mb-4">
-                    <a asp-page="/Manage/Courses/Index" asp-route-id="@course.Id" class="text-decoration-none">
-                        <div class="card h-100 card-hover" style="border-left: 5px solid @course.HexColor;">
-                            <div class="card-body d-flex flex-column justify-content-between">
-                                <div>
-                                    <h5 class="card-title fw-bold">@course.Name</h5>
-                                    <p class="card-text">@course.Description</p>
-                                </div>
-
-                                <div class="mt-3 d-flex align-items-center justify-content-between">
-                                    <small class="text-muted">Incomplete Tasks: @(course.StudyTasks.Count(t => !t.Completed))</small>
-                                </div>
-                            </div>
+        <div class="col-md-4 mb-4">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#course-create-modal" class="text-decoration-none">
+                <div class="card h-100 card-hover" style="border-left: 5px solid grey;">
+                    <div class="card-body d-flex flex-column justify-content-between">
+                        <div>
+                            <h5 class="text-body-tertiary text-opacity-50 fw-bold"><i class="bi bi-plus-lg me-2"></i>Add New Course</h5>
+                            <p class="card-text text-body-tertiary">Description...</p>
                         </div>
-                    </a>
+                        <div class="mt-3 d-flex align-items-center justify-content-between">
+                            <small class="text-muted text-body-tertiary">Status...</small>
+                        </div>
+                    </div>
                 </div>
-            }
-      
-        }
+            </a>
+        </div>
     </div>
 </div>
 
