--- a/src/Pomodoro.UI/Pages/Manage/Courses/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Courses/Index.cshtml
@@ -199,14 +199,11 @@
 </div>
 <div class="mb-3">
     <div class="row">
-        <div class="col-12 col-md-6 mb-3">
-            <div class="d-flex justify-content-between align-items-end mb-3">
-                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#study-task-create-modal"><i class="bi bi-plus-lg"></i> New Task</button>
-            </div>
+        <div class="col-12 col-md mb-3">
             @await Html.PartialAsync("Partials/_Tasks")
         </div>
-        <div class="col-12 col-md-6">
-            <h6>Progress</h6>
+        <div class="col-12 col-md @(Model.Course.StudyTasks.Any(u => u.Completed) ? "" : "d-none")">
+            <h5 class="mb-3">Progress</h5>
             <div id="main" class="h-100" style="min-height: 200px;"></div>
         </div>
 
