--- a/src/Pomodoro.UI/Pages/Manage/Courses/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Courses/Index.cshtml
@@ -199,14 +199,7 @@
 </div>
 <div class="mb-3">
     <div class="row">
-        <div class="col-12 col-md mb-3">
-            @await Html.PartialAsync("Partials/_Tasks")
-        </div>
-        <div class="col-12 col-md @(Model.Course.StudyTasks.Any(u => u.Completed) ? "" : "d-none")">
-            <h5 class="mb-3">Progress</h5>
-            <div id="main" class="h-100" style="min-height: 200px;"></div>
-        </div>
-
+        @await Html.PartialAsync("Partials/_Dynamic")
     </div>
     
 </div>
